--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,15 @@
 /node_modules
 /build
 /dist
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
 src/public/css/
 .env
 package-lock.json
