--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "joi": "^17.12.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "nodemon": "^3.1.0",
-    "sharp": "^0.33.5"
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.9",
+    "sharp": "^0.33.5",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.7",
