build: apply docker build app

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "npm run build && node ./dist/bin/server.js",
     "dev": "nodemon --exec npx babel-node src/bin/server.js",
     "kill-port": "npx kill-port",
-    "clean": "if exist dist (rmdir /s/q dist) && mkdir dist",
+    "clean1": "if exist dist (rmdir /s/q dist) && mkdir dist",
+    "clean": "rm -rf dist && mkdir dist",
     "build:babel": "babel ./src --out-dir dist --copy-files",
     "build": "npm run clean && npm run build:babel",
     "lint": "eslint --fix --ext .js .",
