--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ES6",
     "module": "CommonJS",
+    "outDir": "./dist",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -36,7 +37,8 @@
   },
   "exclude": [
     "node_modules",
-    "dist"
+    "dist",
+    "src/uploads"
   ],
   "include": [
     "src/**/*"
