--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "author": "gdsc",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^7.15.2",
     "amqplib": "^0.10.5",
     "axios": "^1.8.3",
     "bcryptjs": "^2.4.3",
